--- a/public/2ndgraded.css
+++ b/public/2ndgraded.css
@@ -44,25 +44,10 @@
     }
     .nav-links a:hover {
       color: #00ccff;
-      text-shadow: 0 0 10px #00ccff;
+      text-shadow: 0 0 20px #00ffff, 0 0 35px #00ccff;
     }
-a:link {
-  color: blue;
-  text-decoration: none;
-}
 
-a:visited {
-  color: purple;
-}
-
-a:hover {
-  color: red;
-  text-decoration: underline;
-}
-
-a:active {
-  color: orange;
-}
-
-
+	.nav-links a:visited {
+		color: purple;
+	}
   
