--- a/public/2ndgraded.css
+++ b/public/2ndgraded.css
@@ -13,6 +13,13 @@
     a { text-decoration: none; color: inherit; }
     img { max-width: 100%; display: block; }
 
+ .subheader {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: #00ccff;
+    }
+
 
 	footer {
 	background-color: #15192b;
